2012-10-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Remove all
	definitions and declarations that are provided by
	<bits/fcntl-linux.h> and include <bits/fcntl-linux.h>.

2012-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14683]
	* elf/Makefile (tests-static): Add tst-leaks1-static.
	(tests): Also depend on $(objpfx)tst-leaks1-static-mem.
	($(objpfx)tst-leaks1-static): New rule.
	($(objpfx)tst-leaks1-static-mem): Likewise.
	(tst-leaks1-static-ENV): New macro.
	* elf/dl-open.c (dl_open_worker): Check the main application
	only if SHARED is defined.
	* elf/tst-leaks1-static.c: New file.

2012-10-20  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/bits/fcntl-linux.h: New file, contains
	generic values for Linux.
	* sysdeps/unix/sysv/linux/x86/bits/fcntl.h: Remove all definitions
	and declarations that are provided by <bits/fcntl-linux.h> and
	include <bits/fcntl-linux.h>.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.

2012-10-20  Roland McGrath  <roland@hack.frob.com>

	* io/fcntl.h: Move include of <bits/types.h> to the top and
	include it unconditionally.

2012-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	* wcsmbs/Makefile (tests-ifunc): New variable.
	(tests): Add $(tests-ifunc).
	* wcsmbs/test-wcschr-ifunc.c: New file.
	* wcsmbs/test-wcscmp-ifunc.c: Likewise.
	* wcsmbs/test-wcscpy-ifunc.c: Likewise.
	* wcsmbs/test-wcslen-ifunc.c: Likewise.
	* wcsmbs/test-wcsrchr-ifunc.c: Likewise.
	* wcsmbs/test-wmemcmp-ifunc.c: Likewise.

	* string/Makefile (tests-ifunc): New variable.
	(tests): Add $(tests-ifunc).
	* string/test-memccpy.c (TEST_NAME): New macro.
	* string/test-memchr.c (TEST_NAME): Likewise.
	* string/test-memcmp.c (TEST_NAME): Likewise.
	* string/test-memcpy.c (TEST_NAME): Likewise.
	* string/test-memmem.c (TEST_NAME): Likewise.
	* string/test-memmove.c (TEST_NAME): Likewise.
	* string/test-memset.c (TEST_NAME): Likewise.